force-app/main/default/objects/Location__c/fields/Expected_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Open_Date__c</fullName>
    <label>Expected Open Date</label>
    <type>Date</type>
</CustomField>