force-app/main/default/objects/Location__c/fields/Gloves_quantity__c.field-meta.xml
<CustomField>
    <fullName>Gloves_quantity__c</fullName>
    <label>Gloves quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>