force-app/main/default/objects/Location__c/fields/Location_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Location_Close_Date__c</fullName>
    <label>Location Close Date</label>
    <type>Date</type>
</CustomField>