force-app/main/default/objects/Location__c/fields/Location_Phone__c.field-meta.xml
<CustomField>
    <fullName>Location_Phone__c</fullName>
    <label>Location Phone</label>
    <type>Phone</type>
</CustomField>