force-app/main/default/objects/Location__c/fields/Mask_quantity__c.field-meta.xml
<CustomField>
    <fullName>Mask_quantity__c</fullName>
    <label>Mask quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>