force-app/main/default/objects/Location__c/fields/Ongoing_Issues__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Issues__c</fullName>
    <label>Ongoing Issues</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>