force-app/main/default/objects/Location__c/fields/State_Region__c.field-meta.xml
<CustomField>
    <fullName>State_Region__c</fullName>
    <label>State/Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>