force-app/main/default/objects/Location__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Partial Hours</fullName>
            </value>
            <value>
                <fullName>Soft Close</fullName>
            </value>
            <value>
                <fullName>Hard Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>