force-app/main/default/objects/Location__c/listViews/Employee_Office_Status.listView-meta.xml
<ListView>
    <fullName>Employee_Office_Status</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Employee Office Status</label>
</ListView>