force-app/main/default/objects/Location__c/listViews/Location_Manager.listView-meta.xml
<ListView>
    <fullName>Location_Manager</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Location_Manager</label>
</ListView>